--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="header-container">
-                <a href="#" class="logo">Mi<span>Espacio</span></a>
+                <a href="#" class="logo">K<span>Lamar</span></a>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Temas</a></li>
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Más que rap</h1>
-                <p class="hero-text">Un espacio donde descubrir un poco más sobre Kendrick</p>
+                <p class="hero-text">Sumérgete en la música de Kendrick Lamar y descubre cómo sus letras transforman experiencias personales en mensajes universales..</p>
                 <a href="#" class="btn">Explorar música</a>
                 <a href="#" class="btn btn-outline">Ver Destacados</a>
             </div>
